v0.14.0/_sources/projections/cyl/cyl_cassini.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/cyl/cyl_cassini.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_cyl_cyl_cassini.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_cyl_cyl_cassini.py:


Cassini cylindrical projection
==============================

This cylindrical projection was developed in 1745 by César-François Cassini de
Thury for the survey of France. It is occasionally called Cassini-Soldner since
the latter provided the more accurate mathematical analysis that led to the
development of the ellipsoidal formulae. The projection is neither conformal
nor equal-area, and behaves as a compromise between the two end-members. The
distortion is zero along the central meridian. It is best suited for mapping
regions of north-south extent. The central meridian, each meridian 90° away,
and equator are straight lines; all other meridians and parallels are complex
curves.

**c**\ *lon0/lat0*\ */scale* or **C**\ *lon0/lat0*\ */width*

The projection is set with **c** or **C**. The projection center is set by
*lon0/lat0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 22-34



.. image-sg:: /projections/cyl/images/sphx_glr_cyl_cassini_001.png
   :alt: cyl cassini
   :srcset: /projections/cyl/images/sphx_glr_cyl_cassini_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    # Use the ISO code for Madagascar (MG) and pad it by 2 degrees (+R2)
    fig.coast(
        region="MG+R2",
        projection="C47/-19/12c",
        frame="afg",
        land="gray80",
        water="steelblue",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.287 seconds)


.. _sphx_glr_download_projections_cyl_cyl_cassini.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: cyl_cassini.ipynb <cyl_cassini.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: cyl_cassini.py <cyl_cassini.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: cyl_cassini.zip <cyl_cassini.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
